--- a/test/src/test/java/uks/debuggen/party/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/party/classModel.yaml
@@ -199,6 +199,7 @@ pre.shouldHave(text(\"- 13_05:\"));
 // page 14:00
 open(\"http://localhost:42001/page/14_00\");
 $(\"#party\").setValue(\"SE BBQ\");
+$(\"#date\").setValue(\"Friday\");
 $(\"#location\").setValue(\"Uni\");
 $(\"#ok\").click();
 
@@ -214,6 +215,7 @@ pre.shouldHave(text(\"- 14_01:\"));
 pre = $(\"#data\");
 pre.shouldHave(text(\"- sE_BBQ:\"));
 pre.shouldHave(matchText(\"name:.*\\"SE BBQ\\"\"));
+pre.shouldHave(matchText(\"date:.*Friday\"));
 pre.shouldHave(matchText(\"location:.*Uni\"));
 
 // page 14:02
